--- a/mortgage-front/angular.json
+++ b/mortgage-front/angular.json
@@ -37,6 +37,7 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": [],
@@ -107,5 +108,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "2b9749a0-59b2-465f-955d-409cd1dfac47"
   }
 }
