--- a/mortgage-front/tsconfig.json
+++ b/mortgage-front/tsconfig.json
@@ -14,7 +14,8 @@
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node",
+    "baseUrl": "src",
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
