--- a/mortgage-front/angular.json
+++ b/mortgage-front/angular.json
@@ -101,6 +101,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/cyan-orange.css",
               "src/styles.css"
             ],
             "scripts": []
