--- a/mortgage-front/package.json
+++ b/mortgage-front/package.json
@@ -16,8 +16,9 @@
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^18.0.0",
-    "@angular/material": "^18.0.3",
+    "@angular/material": "^18.0.4",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/platform-server": "^18.0.0",
