--- a/mortgage-front/package.json
+++ b/mortgage-front/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.4",
+    "@canvasjs/angular-charts": "^1.2.0",
     "express": "^4.18.2",
+    "is-mobile": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
