--- a/mortgage-front/angular.json
+++ b/mortgage-front/angular.json
@@ -31,6 +31,10 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              
+                "src/favicon.ico",
+                "src/assets",
+           
               {
                 "glob": "**/*",
                 "input": "public"
