--- a/mortgage-front/package.json
+++ b/mortgage-front/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.4",
+    "@canvasjs/angular-charts": "^1.2.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ng2-charts": "^6.0.1",
@@ -47,4 +48,3 @@
     "typescript": "~5.4.2"
   }
 }
-
