--- a/mortgage-front/angular.json
+++ b/mortgage-front/angular.json
@@ -42,7 +42,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/custom-theme.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
