--- a/mortgage-front/package.json
+++ b/mortgage-front/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "mortgage-client",
+  "name": "client-side",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
-    "build": "ng build --prod",
-    "build:staging":"ng build --configuration=staging",
+    "start": "ng serve",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prebuild":"npm install",
-    "prebuild:staging":"npm install",
-    "serve:ssr:mortgage-client": "node dist/mortgage-client/server/server.mjs"
+    "deploy": "ng build --configuration production && npx angular-cli-ghpages --dir=dist"
   },
   "private": true,
   "dependencies": {
@@ -19,29 +16,20 @@
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
-    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^18.0.0",
     "@angular/material": "^18.0.4",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
-    "@angular/ssr": "^18.0.4",
-    "@canvasjs/angular-charts": "^1.2.0",
-    "bootstrap": "^5.3.3",
-    "express": "^4.18.2",
-    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.4",
-    "@angular/cli": "^18.0.4",
+    "@angular-devkit/build-angular": "^18.0.5",
+    "@angular/cli": "^18.0.5",
     "@angular/compiler-cli": "^18.0.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
