--- a/mortgage-front/package.json
+++ b/mortgage-front/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
+    "jwt-decode": "^4.0.0",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
