--- a/mortgage-front/angular.json
+++ b/mortgage-front/angular.json
@@ -43,7 +43,9 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/custom-theme.scss"
+           
             ],
             "scripts": [],
             "server": "src/main.server.ts",
