--- a/mortgage-front/package.json
+++ b/mortgage-front/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.4",
     "@canvasjs/angular-charts": "^1.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ng2-charts": "^6.0.1",
