--- a/mortgage-front/package.json
+++ b/mortgage-front/package.json
@@ -27,6 +27,7 @@
     "@canvasjs/angular-charts": "^1.2.0",
     "@microsoft/signalr": "^8.0.7",
     "bootstrap": "^5.3.3",
+    "docx": "^8.5.0",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
