--- a/mortgage-front/package.json
+++ b/mortgage-front/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@microsoft/signalr": "^8.0.7",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "docx": "^8.5.0",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
