--- a/mortgage-front/angular.json
+++ b/mortgage-front/angular.json
@@ -26,15 +26,14 @@
             "outputPath": "dist/mortgage-client",
             "index": "src/index.html",
             "browser": "src/main.ts",
+            "baseHref": "/mortgage-front/",
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              
-                "src/favicon.ico",
-                "src/assets",
-           
+              "src/favicon.ico",
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -42,8 +41,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
-,
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss"
             ],
             "scripts": [],
@@ -58,8 +56,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "4kB",
-                  "maximumError": "5MB"
+                  "maximumWarning": "8mb",
+                  "maximumError": "8mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "5mb",
+                  "maximumError": "5mb"
                 }
               ],
               "outputHashing": "all"
